[gd_scene load_steps=13 format=3 uid="uid://c5nscqmqpj63y"]

[ext_resource type="Script" uid="uid://ckmil7o3jj64m" path="res://scripts/slime_enemy.gd" id="1_fq0mw"]
[ext_resource type="PackedScene" uid="uid://bqhlm5rolw1xo" path="res://scenes/injury_zone.tscn" id="2_fq0mw"]
[ext_resource type="Texture2D" uid="uid://by50umet3q5s" path="res://assets/brackey/sprites/slime_purple.png" id="3_hf6xp"]
[ext_resource type="PackedScene" uid="uid://6hdn2b1ki1oc" path="res://scenes/persist/slide_enemy_serializable_component.tscn" id="4_2blxa"]
[ext_resource type="PackedScene" uid="uid://gra5myrijv4y" path="res://scenes/damage/damage_receiver_component.tscn" id="5_hf6xp"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_c78co"]
radius = 5.0
height = 12.0

[sub_resource type="AtlasTexture" id="AtlasTexture_asgod"]
atlas = ExtResource("3_hf6xp")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_078ac"]
atlas = ExtResource("3_hf6xp")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ydsu"]
atlas = ExtResource("3_hf6xp")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2y6u"]
atlas = ExtResource("3_hf6xp")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_j0w84"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_asgod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_078ac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ydsu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m2y6u")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hf6xp"]
size = Vector2(14, 13)

[node name="SlimeEnemy" type="CharacterBody2D"]
collision_layer = 32
collision_mask = 0
script = ExtResource("1_fq0mw")

[node name="InjuryZone" parent="." instance=ExtResource("2_fq0mw")]
position = Vector2(0, 5)
collision_layer = 3
collision_mask = 3
injury_zone_type = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="InjuryZone"]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_c78co")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_j0w84")
autoplay = "default"
frame = 1
frame_progress = 0.810745

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, 5)
target_position = Vector2(7, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, 5)
target_position = Vector2(-7, 0)

[node name="SlideEnemySerializableComponent" parent="." instance=ExtResource("4_2blxa")]

[node name="DamageReceiverComponent" parent="." instance=ExtResource("5_hf6xp")]
position = Vector2(-8, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5.5)
shape = SubResource("RectangleShape2D_hf6xp")
